test/Fail/Issue2376Lambda.err
Issue2376Lambda.agda:11.1-12.19: error: [TerminationIssue]
Termination checking failed for the following function:
  f
Problematic call:
  f (id p)
    (at Issue2376Lambda.agda:12.11-12)
